vlib/v/checker/tests/assign_global_to_shared_err.out
vlib/v/checker/tests/assign_global_to_shared_err.vv:1:1: error: use `v -enable-globals ...` to enable globals
    1 | __global a = 0
      | ~~~~~~~~
    2 | 
    3 | fn main() {
