vlib/v/checker/tests/assign_global_to_shared_err.vv
__global a = 0

fn main() {
	shared b := a
}
